<resources>
    <string translatable="false" name="app_name">Safe YOU</string>
    <string translatable="false" name="armenian">Հայերեն</string>
    <string translatable="false" name="english">English</string>
    <string translatable="false" name="alert_message_description" />
    <string translatable="false" name="verify_count_down">%1$ss</string>
    <string translatable="false" name="rec_current_position">00:00</string>
    <string translatable="false" name="time_ago">ago</string>
    <string translatable="false" name="day_ago">a day</string>
    <string translatable="false" name="days_ago">{0} days</string>
    <string translatable="false" name="hour_ago">about an hour</string>
    <string translatable="false" name="hours_ago">{0} hours</string>
    <string translatable="false" name="minute_ago">about a minute</string>
    <string translatable="false" name="minutes_ago">{0} minutes</string>
    <string translatable="false" name="month_ago">about a month</string>
    <string translatable="false" name="months_ago">{0} months</string>
    <string translatable="false" name="seconds_ago">less than a minute</string>
    <string translatable="false" name="suffix_from_now">from now</string>
    <string translatable="false" name="year_ago">about a year</string>
    <string translatable="false" name="years_ago">{0} years</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        google_maps_key
    </string>
    <string name="ngos_title_key_pressed"><font fgcolor='#9834B7'>Network</font></string>
    <string name="forums_title_key_pressed"><font fgcolor='#9834B7'>Forums</font></string>
    <string name="help_pressed"><font fgcolor='#9834B7'>HELP</font></string>
    <string name="emergency_contacts_title_pressed"><font fgcolor='#9834B7'>Emergency Contacts</font></string>
    <string name="dual_pin_pressed"><font fgcolor='#9834B7'>SECURITY</font></string>
    <string name="messages_title_key_Pressed"><font fgcolor='#9834B7'>Private Messages</font></string>
    <string name="about_us_title_key">About Us</string>
    <string name="birth_date_title_key">Birthday</string>
    <string name="cancel">Cancel</string>
    <string name="choose_from_gallery_title_key">Choose From Gallery</string>
    <string name="choose_photo_title">Choose Photo</string>
    <string name="confirm_fake_pin_text_key">Confirm Fake Pin</string>
    <string name="confirm_password_text_key">Confirm Password</string>
    <string name="confirm_real_pin_text_key">Confirm Real Pin</string>
    <string name="done_key">Done</string>
    <string name="emergency_contact_title_key">Emergency Contact %1$d</string>
    <string name="emergency_message_title_key">Emergency message</string>
    <string name="enter_fake_pin_text_key">Enter fake pin in 4 digits</string>
    <string name="enter_real_pin_text_key">Enter real pin in 4 digits</string>
    <string name="error_text_key">Error</string>
    <string name="fill_required_fields_text_key">Please fill required fields</string>
    <string name="first_name_title_key">First name</string>
    <string name="first_name_required_title_key">First name *</string>
    <string name="log_out_title_key">Logout</string>
    <string name="mobile_number_text_key">Mobile Number</string>
    <string name="next_key">Next</string>
    <string name="ngo_title_key">Name of Service %1$d</string>
    <string name="nick_name_title_key">Nickname</string>
    <string name="ok">OK</string>
    <string name="password_text_key">Password</string>
    <string name="passwords_not_match_text_key">Passwords do not match</string>
    <string name="pins_do_not_match_text_key">Selected pins do not match</string>
    <string name="please_enter_valid_email_message_key">Please enter valid email address</string>
    <string name="please_enter_valid_number_message_key">Please enter valid phone number</string>
    <string name="please_enter_valid_password_message_key">Password must contain at least 8 symbols</string>
    <string name="police_title_key">Police</string>
    <string name="remove_photo_title_key">Remove photo</string>
    <string name="resend_otp_text_key">Resend 6 digit CODE?</string>
    <string name="resend_title_key">Resend</string>
    <string name="return_key">Return</string>
    <string name="submit_title_key">Submit</string>
    <string name="take_photo_title_key">Take a new photo</string>
    <string name="verifying_otp_text_key">VERIFICATION CODE</string>
    <string name="dual_pin_title_key">Dual Pin</string>
    <string name="ngos_description_text_key">Find and contact NGOs, women rights defenders and other women empowerment organizations that exist nearby.</string>
    <string name="forums_title_key">Forums</string>
    <string name="forums_description_text_key">A discussion board to anonymously talk about different urgent topics and get advice from professionals.</string>
    <string name="help_section_description_text_key">Press the help button and send free alert message with your geolocation to your emergency contacts to let them know you are in trouble. Pressing the Help Button enables audio recording, which you can either send to chosen service contacts, save for later use, or delete at any time.</string>
    <string name="otp_info_text_key">A 6 digit CODE has been send to number %1$s</string>
    <string name="network_title">Network</string>
    <string name="help_title_key">Help</string>
    <string name="alert_message_sent_text_key">Alert messages have been successfully sent!</string>
    <string name="something_went_wrong_text_key">Something went wrong</string>
    <string name="settings_title">Settings</string>
    <string name="last_name_title_key">Last name</string>
    <string name="last_name_required_text_key">Last name *</string>
    <string name="other_title">Other</string>
    <string name="no_records_yet_text_key">You do not have any records yet</string>
    <string name="registration_error_key">Registration Error</string>
    <string name="edit_key">Edit</string>
    <string name="save_key">Save</string>
    <string name="value_can_not_be_empty_key">Value can not be empty</string>
    <string name="fill_current_password_field_text_key">Please fill current password field</string>
    <string name="more_info_text_key">More info</string>
    <string name="reply_text_key">Reply</string>
    <string name="web_address_text_key">Web Address</string>
    <string name="email_text_key">email</string>
    <string name="mobile_text_key">Mobile</string>
    <string name="remove_from_helpline_title_key">Remove</string>
    <string name="add_to_helpline_title_key">Add to Contacts</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="new_password_title_key">New password</string>
    <string name="add_dual_pin_title_key">Add a New Dual PIN</string>
    <string name="terms_and_conditions_agreement_text">I have read and agree to the terms and conditions and privacy policy</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Register</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="title_request_new_password">REQUEST NEW PASSWORD</string>
    <string name="forgot_pin_text_key">Forgot PIN?</string>
    <string name="current_password_text_key">Current password</string>
    <string name="title_all">All</string>
    <string name="push_hold_text_key">PUSH \nHOLD</string>
    <string name="stop_recording_text_key">STOP\nRECORD</string>
    <string name="update_password_title">Update Password</string>
    <string name="alert_message_title">Alert Message!</string>
    <string name="add_emergency_contacts_text_key">Add emergency contacts, who will be contacted if you are in Danger</string>
    <string name="pin_length_text_key">PIN should consist of 4 digits</string>
    <string name="real_pin_fake_pin_different">Real PIN should be different from the fake PIN</string>
    <string name="check_internet_connection_text_key">Please check your internet connection</string>
    <string name="marital_status_text_key">Marital Status</string>
    <string name="select_marital_status_text_key">Choose Marital Status</string>
    <string name="photo_library">Photo Gallery</string>
    <string name="you_replied_to_text_key">You replied to %1$s</string>
    <string name="replied_to_text_key">%1$s replied to %1$s</string>
    <string name="replying_to_text_key">Replying to %1$s</string>
    <string name="record_was_successfully_saved_text_key">Record was Successfully saved!</string>
    <string name="record_was_successfully_sent_text_key">Recording was successfully sent</string>
    <string name="close_key">Close</string>
    <string name="please_fill_phone_number_text_key">Please fill phone number field.</string>
    <string name="password_update_success_text_key">Password updated successfully</string>
    <string name="success_text_key">Success</string>
    <string name="no_mail_account_registered">You have not any mail account on your iPhone</string>
    <string name="time_text_key">Time:</string>
    <string name="enter_passcode_text_key">Enter your PIN</string>
    <string name="title_saved_key">Saved</string>
    <string name="title_sent_key">Sent</string>
    <string name="delete_key">Delete</string>
    <string name="recording_title_key">Recordings</string>
    <string name="want_logout_text_key">Do you want to log out?</string>
    <string name="wrong_url_text_key">Wrong URL</string>
    <string name="clear_text_key">Clear</string>
    <string name="add_dual_pin_for_security">Want to Hide the App from others? Then add a Dual Pin!\n The Real PIN to access the app, and the Fake Pin to access Photo gallery.\n Using the app without Dual Pin will make access quicker.</string>
    <string name="enter_pint_to_deactivate">Enter your SafeYou PIN Code to deactivate PIN Code</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="choose_your_country">Choose Your \nCountry</string>
    <string name="which_country_to_browse_in">Which country do you like to browse in?</string>
    <string name="choose_your_language">Choose Your App \nLanguage</string>
    <string name="choose_the_language_to_continue">Please choose the language to continue</string>
    <string name="profile_title_key">Profile</string>
    <string name="change_password_key">Change Password</string>
    <string name="country_title_key">Country</string>
    <string name="language_title_key">Language</string>
    <string name="notifications_title_key">Notifications</string>
    <string name="support_title_key">Support</string>
    <string name="apply_regional_changes_text">In case of applying selected options you will logout</string>
    <string name="apply_title_key">Apply</string>
    <string name="profile_picture_title_key">Profile Picture</string>
    <string name="emergency_services_title">My Support Contacts</string>
    <string name="edit_pin_code_title">Edit Pin Code</string>
    <string name="enter_your_pin_code">Enter your Safe YOU PIN Code</string>
    <string name="comment">comment</string>
    <string name="intro_view_description_text_key">Learn about the functions of the App by pressing on the buttons below.</string>
    <string name="title_menu">Menu</string>
    <string name="messages">Messages</string>
    <string name="emergency_contacts_title_key">Emergency Contacts</string>
    <string name="messages_title_key">Private Messages</string>
    <string name="dual_pin">SECURITY</string>
    <string name="copy">Copy</string>
    <string name="edit_pin_dialog_description">Enter your Safe YOU PIN code to edit PIN code</string>
    <string name="report">Report</string>
    <string name="close_dialog_description">Close dialog</string>
    <string name="audio_wave_description">Audio wave</string>
    <string name="preview_icon_description">Preview</string>
    <string name="play_icon_description">Play</string>
    <string name="block_user">Block</string>
</resources>