<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/_280sdp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shadow"
    android:paddingBottom="@dimen/_25sdp">

    <ImageView
        android:id="@+id/cancelIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="15dp"
        android:background="@color/transparent"
        android:contentDescription="@string/close_dialog_description"
        android:src="@drawable/icon_cancel_record_info_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/new_main_icon_tint_color" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_260sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/hay_roboto_bold"
        android:gravity="center"
        android:text="@string/enter_pin_code"
        android:textColor="@color/textPurpleColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelIcon" />

    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/edit_pin_dialog_description"
        android:textColor="@color/fewBlack"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <EditText
        android:id="@+id/edtDeletePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:backgroundTint="@color/textPurpleColor"
        android:gravity="center"
        android:maxLength="4"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/txtSubTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>