<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fragmentsBackgroundColors"
    android:layout_height="match_parent"
    tools:context=".view.RecordDetailsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.libraries.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".view.RecordDetailsActivity" />

    <include
        android:id="@+id/recInfo"
        layout="@layout/adapter_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@id/map" />

    <fambox.pro.audiowaveview.AudioWaveView
        android:id="@+id/audioWaveView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:animateExpansion="true"
        app:chunkHeight="@dimen/_30sdp"
        app:chunkRadius="@dimen/_6sdp"
        app:chunkSpacing="@dimen/_3sdp"
        app:chunkWidth="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recInfo"
        app:minChunkHeight="@dimen/_2sdp"
        app:touchable="true"
        android:contentDescription="@string/audio_wave_description"
        app:waveBackgroundColor="@color/chunkBackgroundColor"
        app:waveColor="@color/chunkColor" />

    <TextView
        android:id="@+id/recDurationStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="@id/audioWaveView"
        app:layout_constraintTop_toBottomOf="@id/audioWaveView" />

    <TextView
        android:id="@+id/recDurationEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/rec_current_position"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@id/audioWaveView"
        app:layout_constraintTop_toBottomOf="@id/audioWaveView" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/delete_key"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/red"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="@id/audioWaveView"
        app:layout_constraintTop_toBottomOf="@id/recDurationStart" />

    <ImageView
        android:id="@+id/shareRecord"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:scaleType="fitEnd"
        android:src="@drawable/share_gray"
        android:contentDescription="@string/com_facebook_share_button_text"
        app:layout_constraintEnd_toEndOf="@id/audioWaveView"
        app:layout_constraintTop_toBottomOf="@id/recDurationEnd"
        app:tint="@color/share_button_gray" />

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:padding="@dimen/_3sdp"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:thumb="@drawable/seek_bar_thumb"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/play" />

    <ImageView
        android:id="@+id/prev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/prev"
        android:contentDescription="@string/preview_icon_description"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintEnd_toStartOf="@id/play"
        app:layout_constraintTop_toTopOf="@id/play" />

    <ToggleButton
        android:id="@+id/play"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/check_play"
        android:textOff=""
        android:textOn=""
        android:contentDescription="@string/play_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next"
        app:layout_constraintTop_toBottomOf="@id/delete" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintEnd_toEndOf="@id/audioWaveView"
        app:layout_constraintTop_toTopOf="@id/play"
        android:contentDescription="@string/next_key"/>

    <include layout="@layout/loading_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>