<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HelpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:src="@drawable/logo_without_word"
        app:layout_constraintBottom_toBottomOf="@id/btnDualPin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="@id/btnDualPin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iconSafeYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/safe_you_wprd"
        app:layout_constraintBottom_toTopOf="@id/tvForDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/intro_view_description_text_key"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btnDualPin"
        app:layout_constraintTop_toBottomOf="@id/iconSafeYou" />

    <ToggleButton
        android:id="@+id/btnDualPin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/buttons_shadow"
        android:drawableStart="@drawable/icon_security"
        android:drawablePadding="5dp"
        android:drawableTint="@color/new_main_icon_tint_color"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="start|center_vertical"
        android:minWidth="160dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textAllCaps="true"
        android:textColor="@color/textPurpleColor"
        android:textOff="@string/dual_pin"
        android:textOn="@string/dual_pin"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHelp"
        app:layout_constraintEnd_toStartOf="@+id/btnInfo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingPrefix,UnusedAttribute" />

    <ToggleButton
        android:id="@+id/btnInfo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons_shadow"
        android:drawableStart="@drawable/icon_emergency_contact"
        android:drawablePadding="5dp"
        android:drawableTint="@color/new_main_icon_tint_color"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="start|center_vertical"
        android:minWidth="160dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textAllCaps="true"
        android:textColor="@color/textPurpleColor"
        android:textOff="@string/emergency_contacts_title_key"
        android:textOn="@string/emergency_contacts_title_key"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDualPin"
        app:layout_constraintTop_toTopOf="@id/btnDualPin"
        tools:ignore="UnusedAttribute" />

    <ToggleButton
        android:id="@+id/btnHelp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_margin="14dp"
        android:background="@drawable/buttons_shadow"
        android:drawableStart="@drawable/icon_tutorial_help"
        android:drawablePadding="5dp"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="start|center"
        android:minWidth="160dp"
        android:paddingStart="@dimen/_38sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textAllCaps="true"
        android:textColor="@color/textPurpleColor"
        android:textOff="@string/help_title_key"
        android:textOn="@string/help_title_key"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnForums"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/btnForums"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/buttons_shadow"
        android:drawableStart="@drawable/icon_forum"
        android:drawablePadding="5dp"
        android:drawableTint="@color/new_main_icon_tint_color"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="start|center_vertical"
        android:minWidth="160dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textAllCaps="true"
        android:textColor="@color/textPurpleColor"
        android:textOff="@string/forums_title_key"
        android:textOn="@string/forums_title_key"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnPrrivateMessage"
        app:layout_constraintEnd_toStartOf="@id/btnNGO"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <ToggleButton
        android:id="@+id/btnNGO"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/buttons_shadow"
        android:drawableStart="@drawable/icon_network"
        android:drawablePadding="5dp"
        android:drawableTint="@color/new_main_icon_tint_color"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="start|center_vertical"
        android:minWidth="160dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textAllCaps="true"
        android:textColor="@color/textPurpleColor"
        android:textOff="@string/network_title"
        android:textOn="@string/network_title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnForums"
        app:layout_constraintTop_toTopOf="@id/btnForums"
        tools:ignore="UnusedAttribute" />

    <ToggleButton
        android:id="@+id/btnPrrivateMessage"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons_shadow"
        android:drawableStart="@drawable/icon_private_message"
        android:drawablePadding="5dp"
        android:drawableTint="@color/new_main_icon_tint_color"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/hay_roboto_regular"
        android:gravity="start|center_vertical"
        android:minWidth="160dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textAllCaps="true"
        android:textColor="@color/textPurpleColor"
        android:textOff="@string/messages_title_key"
        android:textOn="@string/messages_title_key"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnNextHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/btnNextHelp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:drawableTint="@color/new_main_icon_tint_color"
        android:fontFamily="@font/hay_roboto_regular"
        android:text="@string/next_key"
        android:textAllCaps="false"
        android:textColor="@color/textPurpleColor"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/next_button_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginTop="@dimen/_4sdp"
        tools:ignore="UseCompatTextViewDrawableXml"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>